<resources>
    <string name="app_name" translatable="false">lesNettoyeurs</string>
    <string name="connexion">Connexion</string>
    <string name="pseudo">Pseudo</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="logo" translatable="false">TODO</string>
    <string name="se_connecter">Se connecter</string>
    <string name="erreurmdp">mot de passe est vide</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="erreurlogin">pseudo oublié</string>
    <string name="erreurconnexion">Pseudo ou mot de passe faux</string>
    <string name="_10_25_pm">10:25 PM</string>
    <string name="textview">TextView</string>
    <string name="ceci_est_un_test">Ceci est un test</string>
    <string name="erreurenvoiemessage">Erreur dans l\'envoie du message</string>
    <string name="erreurmessagevide">Votre message est vide</string>
    <string name="message">Message...</string>
    <string name="todo1">TODO</string>
    <string name="discussion">Discussion</string>
    <string name="todo5">TODO</string>
    <string name="map">Map</string>
    <string name="tchat">Tchat</string>
    <string name="quitter">Quitter</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="preparationvoyage">Vous êtes en préparation pour voyager !</string>
    <string name="Mort">Vous êtes mort!</string>
    <string name="Bienvenue">Bienvenue </string>
    <string name="danslejeudesNettoyeurs">  dans le jeu des Nettoyeurs</string>
    <string name="Placeren3IA">Placez-vous en 3IA afin de créer votre Nettoyeur !</string>
    <string name="Vousetesrevenue">Vous êtes bien revenu en jeu, mais vous avez été détecté !</string>
    <string name="attendre1minute">Veuillez rester immobile 1 minutes\n afin de passer en mode voyage</string>
    <string name="trenteseconde">Il reste 30 secondes</string>
    <string name="quinzeseconde">Il reste 15 secondes</string>
    <string name="EnmodeVoyage">\n rappuyez sur l\'avion afin de retourner en jeu</string>
    <string name="EnmodeVoyage2">Vous êtes désormais en mode voyage</string>
    <string name="Nettoyeurvaleur">Nettoyeur ayant pour valeur : </string>
    <string name="CibleValeur">Cible ayant pour valeur : </string>
    <string name="Nettoyeunnettoyeur">Vous avez nettoyer le nettoyeur ennemi bien joué !</string>
    <string name="Echecnettoyagenettoyeur">Vous n\'avez pas réussi à nettoyer le nettoyeur ennemi, dommage ! </string>
    <string name="Pasnettoyerprepartionvoage">Vous êtes en préparation pour le mode voyage, vous ne pouvez pas nettoyer</string>
    <string name="PasnettoyerModeVoyage">Vous êtes en mode voyage, vous ne pouvez pas nettoyer</string>
    <string name="LoinCible">Vous êtes trop loin pour nettoyer la cible !</string>
    <string name="nettoyagecible1">Vous avez nettoyer la cible et n\'avez pas été detecté !</string>
    <string name="nettoyagecible2">Vous avez nettoyer la cible, malheureusement vous avez été detecté </string>
    <string name="nettoyagecible3">C\'est une catastrophe, vous n\'avez pas réussi à nettoyer la cible et avez été detecté ! </string>
    <string name="nettoyagecible4">Vous avez été detecté et avez nettoyé la cible </string>
    <string name="Navbar1">Vous êtes en mode ACTIF</string>
    <string name="Navbar2">Vous êtes en mode PREPARER LE VOYAGE</string>
    <string name="Navbar3">Vous êtes en mode VOYAGE</string>
    <string name="Navbar4">Vous êtes en mode dESSUYER LES SALETEES</string>
    <string name="Navbar5"> joueurs en ligne actuellement</string>
    <string name="Navbar6">Il y a </string>
    <string name="Navbar7">Mon equipe a </string>
    <string name="Navbar8"> points</string>
    <string name="Navbar9">L\'equipe adverse a </string>
    <string name="Vospoints">"Vos Points: "</string>
    <string name="commencez_le_tuto">Commencez le Tuto</string>
    <string name="button1Tuto">C\'est parti !!</string>
    <string name="butontuto2">On continue</string>
    <string name="butonTuto3">C\'est pas fini</string>
    <string name="ButtonTuTo4">Presque la fin</string>
    <string name="TextTuto1">\"Bonjour et Bienvenue dans Les Nettoyeurs.\n Etes vous prêt à comprendre ce jeu amusant \"</string>
    <string name="TextTuto2">Le but du jeu est de Nettoyer les cibles  et aussi les agents ennemis en equipe.\n</string>
    <string name="TextTuto3">Ils sont indiqués sur la map pour la cible c\'est une cible et les agents c\'est un homme vetu de gris.\n</string>
    <string name="TextTuto4">Lorsque  vous nettoyerez, vous pouvez vous faire detecter par les adversaires de l\'autre equipe. \n</string>
    <string name="TextTuto5">Pour connaitre la valeur des points des cibles et les ennemies , restez appuyer sur la cible ou l\'ennemie</string>
    <string name="TextTuto6">Il y a differents modes de deplacement lorsque vous cliquerez là où indique la flèche l\'image va changer. \n</string>
    <string name="TextTuto7">Lorsque l\'avion Monte vous êtes en deplacement ACTIF et donc vous pouvez nettoyer les cibles et joueurs mais votre vitesse est limité \n</string>
    <string name="TextTuto8">Lorsque l\'avion descend vous êtes en VOYAGE, vous n\'avez pas de limite de vitesse mais vous pouvez rien nettoyer.\n</string>
    <string name="TextTuto9">Entre ces 2 modes, il y a le mode preparation Voyage, vous devez restez immobile pendant 1 minutes, une horloge apparaitra.\n</string>
    <string name="TextTuto10">Pour terminer, si vous êtes nettoyé, vous êtes mort et donc vous devez rejoindre le Batiment 3IA pour rejouer</string>
    <string name="TextTuto11">La flèche vous indique  la navigation où vous pouvez trouver vos points personnels, le nombre de joueur en ligne\n et le Tchat pour communiquer avec votre equipe</string>
    <string name="TextTuto12">Les flèches vous indiquent les points de votre equipes et ceux de l\'equipe adverse.\n</string>
    <string name="TextTuto13">Je vous souhaite Bonne chance dans cette aventure</string>
    <string name="ButtonTuto5">Fin</string>
    <string name="Quitter">Quitter</string>
    <string name="ConfimationQuittez">Voulez vous quittez le jeu</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>


</resources>