<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Controleur.PageConnexion">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="75dp"
        android:contentDescription="@string/logo"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/letter_n"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="373dp"
        android:layout_height="442dp"
        android:contentDescription="@string/todo"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/_2068__1_" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:backgroundTint="#2196F3"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/Pseudo"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:backgroundTint="#2196F3"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/pseudo"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="45dp"
        android:fontFamily="monospace"
        android:text="@string/connexion"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />


    <Button
        android:id="@+id/seconnecter"
        android:layout_width="165dp"
        android:layout_height="62dp"
        android:background="@drawable/btn_connexion"
        android:text="@string/se_connecter"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Messageerreur"
        android:layout_width="253dp"
        android:layout_height="22dp"
        android:textAlignment="center"
        android:textColor="#F10C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

</androidx.constraintlayout.widget.ConstraintLayout>