<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Controleur.Tchat2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#2196F3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/retour"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/back"
                    app:tint="#4a4a4a"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="326dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/discussion"
                    android:textColor="#4a4a4a"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#F9F9F9"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/opensansregular"
            android:hint="@string/message"
            android:maxLines="2"
            android:textColorHint="#546E7A"
            android:autofillHints="">

        </EditText>

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/send"
            app:tint="#2196F3"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo5" />

    </LinearLayout>

</LinearLayout>